Fix videos on IE

--- a/docroot/sites/default/themes/maxim_base/css/global.css
+++ b/docroot/sites/default/themes/maxim_base/css/global.css
@@ -1,5 +1,5 @@
 /* body */
-body { background-color:#D8D8D8; font-size: 62.5%; color: #3C3C3C; font-family: Helvetica, Arial, sans-serif; }
+body { background-color:#D8D8D8; font-size: 62.5%; color: #3C3C3C; font-family: Helvetica, Arial, sans-serif; z-index:auto; }
 
 ul { list-style-type:none; }
 a, a:link, a:visited { text-decoration: none; }
@@ -297,9 +297,12 @@ ul.primary li.active a { font-weight:bold; color:#003300; border:1px solid #99CC
 .dart-tag { line-height:0; }
 /* top pushdown */
 #zone-pushdown-wrapper { background-color:#000; }
+#zone-pushdown-wrapper.hide-bg { background-color:transparent }
 #zone-pushdown { padding-left:0;  }
-#zone-pushdown .region-pushdown { width:970px; margin-left:-2px; }
+#zone-pushdown .region-pushdown { width:970px; margin-left:0; }
 #zone-pushdown .dart-tag { margin:10px 0; }
+/* wallpaper */
+#wallpaper { width:100%; height:100%; z-index:-1; position:fixed; cursor:pointer; }
 
 /* Twitter module */
 .module-twitter { margin: 0 auto; width: 300px; }
@@ -319,7 +322,7 @@ ul.primary li.active a { font-weight:bold; color:#003300; border:1px solid #99CC
 .view-maximtv-browser object, .view-maximtv-browser embed, .view-maximtv-browser video,
 .node-video object, .node-video embed, .node-video video,
 .page-node article .field-name-body object, .page-node article .field-name-body embed, .page-node article .field-name-body video
-{ max-width: 100%; width: auto\9; /* ie8 */ }
+{ max-width: 100%;  }
 
 /* Skin ads*/
 /*#bglink { display: block; height: 100%; width: 100%; position: fixed; left: 0; top: 0; z-index: 0; text-indent: -5000em; cursor: pointer; }
